Implement missing method
